<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="redfoxclassic.hehe.ui.activity.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/menu_main_about"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/menu_main_search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>
